--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.28.0
-requests==2.30.0
-pillow==9.5.0
-pandas==2.0.3
-numpy==1.24.3
+streamlit>=1.28.0
+requests>=2.30.0
+Pillow>=10.0.0,<11.0.0
+numpy>=1.26.0,<2.0.0
+pandas>=2.1.0
 
 
 # === BACKEND ===
@@ -48,6 +48,7 @@ numpy==1.24.3
 # joblib==1.4.2
 # scikit-learn==1.6.0
 # opencv-python-headless==4.10.0.84
+
 
 
 
